src/OrchardCore.Modules/OrchardCore.Media/wwwroot/Styles/media.css
/* ... */
[dir=rtl]:root[data-theme=darkmode] .upload .error-message {
  margin-left: 50px;
}
:root[data-theme=darkmode] .upload-warning {
  color: #856404;
}
[dir]:root[data-theme=darkmode] .upload-warning {
  background-color: #fff3cd;
  border-color: #856404;
}
[dir]:root[data-theme=darkmode] .upload-list {
  margin-bottom: 8px;
}
:root[data-theme=darkmode] .upload-list .header {
  height: 40px;
  font-size: 0.875rem;
  color: #666;
}
[dir]:root[data-theme=darkmode] .upload-list .header {
  padding: 6px 20px;
  background-color: rgba(0, 0, 0, 0.03);
  border: solid 1px #e9ecef;
  border-radius: 2px;
  cursor: pointer;
}
[dir]:root[data-theme=darkmode] .upload-list .toggle-button {
  padding: 5px 8px;
  margin-top: -3px;
}
[dir=ltr]:root[data-theme=darkmode] .upload-list .toggle-button {
  float: right;
}
[dir=rtl]:root[data-theme=darkmode] .upload-list .toggle-button {
  float: left;
}
[dir]:root[data-theme=darkmode] .upload-list .card-body {
  border: solid 1px #e9ecef;
  padding: 0;
}
:root[data-theme=darkmode] ol.media-items-grid {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  list-style: none;
}
[dir=ltr]:root[data-theme=darkmode] ol.media-items-grid {
  padding-left: 0;
}
[dir=rtl]:root[data-theme=darkmode] ol.media-items-grid {
  padding-right: 0;
}
[dir=ltr]:root[data-theme=darkmode] ol.media-items-grid.row {
  margin-left: 0;
  margin-right: 0;
}
[dir=rtl]:root[data-theme=darkmode] ol.media-items-grid.row {
  margin-right: 0;
  margin-left: 0;
}
[dir]:root[data-theme=darkmode] ol.media-items-grid li {
  margin-bottom: 16px;
  cursor: pointer;
  border-radius: 0;
}
[dir=ltr]:root[data-theme=darkmode] ol.media-items-grid li {
  margin-left: 0;
  margin-right: 1.9em;
}
[dir=rtl]:root[data-theme=darkmode] ol.media-items-grid li {
  margin-right: 0;
  margin-left: 1.9em;
}
:root[data-theme=darkmode] ol.media-items-grid li .inline-media-button {
  color: #495057;
  opacity: 0;
  position: absolute;
  top: 0px;
  transition: all 0.2s;
}
[dir]:root[data-theme=darkmode] ol.media-items-grid li .inline-media-button {
  padding-top: 0px;
  border-radius: 0px;
  margin-top: -32px;
}
[dir=ltr]:root[data-theme=darkmode] ol.media-items-grid li .inline-media-button {
  right: 0px;
}
[dir=rtl]:root[data-theme=darkmode] ol.media-items-grid li .inline-media-button {
  left: 0px;
}
[dir=ltr]:root[data-theme=darkmode] ol.media-items-grid li .inline-media-button.delete-button {
  margin-right: 2rem;
}
[dir=rtl]:root[data-theme=darkmode] ol.media-items-grid li .inline-media-button.delete-button {
  margin-left: 2rem;
}
[dir=ltr]:root[data-theme=darkmode] ol.media-items-grid li .inline-media-button.edit-button {
  margin-right: 3.8rem;
}
[dir=rtl]:root[data-theme=darkmode] ol.media-items-grid li .inline-media-button.edit-button {
  margin-left: 3.8rem;
}
[dir]:root[data-theme=darkmode] ol.media-items-grid li.selected {
  border: 1px solid #0d6efd;
}
:root[data-theme=darkmode] ol.media-items-grid li.selected .inline-media-button, :root[data-theme=darkmode] ol.media-items-grid li:hover .inline-media-button {
  opacity: 1;
  transition: all 0.2s;
}
[dir]:root[data-theme=darkmode] ol.media-items-grid li.selected .inline-media-button, [dir]:root[data-theme=darkmode] ol.media-items-grid li:hover .inline-media-button {
  margin-top: 0px;
}
:root[data-theme=darkmode] ol.media-items-grid .thumb-container {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
[dir]:root[data-theme=darkmode] ol.media-items-grid .thumb-container {
  background: white;
}
[dir]:root[data-theme=darkmode] ol.media-items-grid .thumb-container img {
  background: repeating-conic-gradient(#e9ecef 0% 25%, transparent 0% 50%) 50%/10px 10px;
}
:root[data-theme=darkmode] .media-items-table {
  font-size: 0.875rem;
}
[dir]:root[data-theme=darkmode] .media-items-table {
  padding: 20px;
}
:root[data-theme=darkmode] .media-items-table .header-row th {
  color: #495057;
  font-size: 0.8125rem;
  user-select: none;
}
[dir]:root[data-theme=darkmode] .media-items-table .header-row th {
  border-top: none !important;
  padding-top: 8px;
  padding-bottom: 8px;
}
[dir=ltr]:root[data-theme=darkmode] .media-items-table .header-row th .thumbnail-column {
  padding-left: 16px;
}
[dir=rtl]:root[data-theme=darkmode] .media-items-table .header-row th .thumbnail-column {
  padding-right: 16px;
}
:root[data-theme=darkmode] .media-items-table tr.media-item {
  height: 75px;
}
[dir]:root[data-theme=darkmode] .media-items-table tr.media-item td {
  border-top: 1px solid rgba(140, 130, 115, 0.13);
  padding: 0.25rem !important;
}
[dir]:root[data-theme=darkmode] .media-items-table tr.media-item.selected {
  background-color: #0a0c0d;
}
[dir=ltr]:root[data-theme=darkmode] .media-items-table tr.media-item.selected {
  border-left: solid 2px #0d6efd;
}
[dir=rtl]:root[data-theme=darkmode] .media-items-table tr.media-item.selected {
  border-right: solid 2px #0d6efd;
}
:root[data-theme=darkmode] .media-items-table .thumbnail-column {
  width: 75px;
  vertical-align: middle;
}
[dir]:root[data-theme=darkmode] .media-items-table .thumbnail-column {
  text-align: center;
}
[dir=ltr]:root[data-theme=darkmode] .media-items-table .thumbnail-column {
  padding-left: 16px;
  padding-right: 16px;
}
[dir=rtl]:root[data-theme=darkmode] .media-items-table .thumbnail-column {
  padding-right: 16px;
  padding-left: 16px;
}
[dir]:root[data-theme=darkmode] .media-items-table .thumbnail-column .img-wrapper {
  background: white;
}
:root[data-theme=darkmode] .media-items-table .thumbnail-column .img-wrapper img {
  max-width: 75px;
  max-height: 75px;
}
[dir]:root[data-theme=darkmode] .media-items-table .thumbnail-column .img-wrapper img {
  background: repeating-conic-gradient(#e9ecef 0% 25%, transparent 0% 50%) 50%/10px 10px;
}
:root[data-theme=darkmode] .media-items-table td {
  vertical-align: middle;
}
[dir]:root[data-theme=darkmode] .media-items-table .text-col {
  margin-top: 16px;
}
/* ... */

